manifests/adguard/adguard-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
spec:
  selector:
    app: adguard
  ports:
  - protocol: TCP
    name: "53tcp"
    port: 53
    targetPort: 53 
  - protocol: UDP
    name: "53udp"
    port: 53
    targetPort: 53
  - protocol: TCP
    name: "784tcp"
    port: 784
    targetPort: 784
  - protocol: TCP
    name: "853tcp"
    port: 853
    targetPort: 853
  - protocol: TCP
    name: "3000tcp"
    port: 3000
    targetPort: 3000
  - protocol: TCP
    name: "80tcp"
    port: 80
    targetPort: 80
  - protocol: TCP
    name: "443tcp"
    port: 443
    targetPort: 443
  type: LoadBalancer
  loadBalancerIP: 192.168.10.35
